# deep-proto

./: .ci-settings.xml  .gitignore  .gitlab-ci.yml  .gitmodules  .sdkmanrc  CHANGELOG.md  LICENSING.md  README.md  README_JAVA.md  README_PYTHON.md  makefile  mkdocs.yml  pom.xml  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml  on_push.yml  pages.yml  release.yml
deep/proto/common/v1/: common.proto
deep/proto/poll/v1/: poll.proto
deepproto/deepproto/proto/poll/v1/: poll.pb.go
deepproto/deepproto/proto/tracepoint/v1/: tracepoint.pb.go
deepproto/proto/common/v1/: common.proto
deepproto/proto/poll/v1/: poll.proto
deepproto/proto/resource/v1/: resource.proto
deepproto/proto/tracepoint/v1/: tracepoint.proto
docs/: .gitignore  common.md  index.html  poll.md  resource.md  styles.css  tracepoint.md
java/: site.xml
scripts/: build_release_go.sh  build_release_python.sh  go_build.sh  proto_build.sh  python_build.sh
