[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep"
description = "DEEP Python Protobuf"
readme = "../../README.md"
license = "Apache-2.0"
requires-python = ">3.7"
authors = [
    { name = "Ben Donnelly", email = "b.w.donnelly1@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = []
version = "VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "src/deep",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deep"]
